9.2.0
- Added support for .NET 9 and EF Core 9 GA versions (WL16638).


9.1.0
- Updated test suite to use constraint-based assertions (WL16397).
- Changed testsuite to use assummptions instead of Assert.Ignore (WL16402).
- Added support for .NET 9 and EFCore 9 preview versions (WL16308).
- Added OpenTelemetry.Api NuGet package reference (WL16453).
- Fixed Code coverage (WL16309).
- Added support for OpenID Connect client authentication (WL16491).
- Fixed bug 8.0.33 Removes Important Locks (MySQL Bug #111759, Oracle Bug #35937318). Thanks to Stuart Lang for the contribution.
- Fixed bug EntityFramework SQL generation of TPT pseudo discriminator column incorrect (MySQL Bug #116028, Oracle Bug #37032982). Thanks to Kristoffer Sjöberg for the contribution.
- Fixed bug Connector does crashes when retrieving data from the database (MySQL Bug #111630, Oracle Bug #35937293). Thanks to Sidraya Jayagond for the contribution.


9.0.0
- Updated NUnit to 4.x (WL16279).
- Removed deprecated OldGetStringBehavior option (WL16280).
- Remove MySqlX.Data.Performance.Console.Tests project (WL16387).
- Updated third party dependencies (WL16291).
- Remove .NET 7 and EF Core 7 (WL16386).
- Fixed bug SQL Keyword "RETURNING" not handled properly when updating data (Oracle Bug #36116171). Thanks to Wang Shiyao for the contribution.
- Fixed bug IIS Website is crashing after upgrading MySQL.Data package to 8.3.0 (Oracle Bug #36483069).
- Updated Wix Toolset to 4.0.5 (Oracle Bug #36627858).
- Fixed bug disabling of mysql_native_password in server causes errors in testsuite (Oracle Bug #36529814).
- Fixed bug EFCore test failing due to misconfiguration (Oracle Bug #36701652).


8.4.0
- Updated FOSS license text in all source files (WL16197).
- Fixed bug Shared memory connection doesn't work in multithread environment (Oracle Bug #36208932).
- Fixed bug Named pipe connection doesn't work in multithread environment (Oracle Bug #36208929).