@@ -57,183 +57,6 @@ namespace MySql.EntityFrameworkCore
     {
     }
 
-#if NET6_0
-    public virtual ResultSetMapping AppendBulkInsertOperation(
-    StringBuilder commandStringBuilder,
-    IReadOnlyList<IReadOnlyModificationCommand> modificationCommands,
-    int commandPosition)
-    {
-      var table = StoreObjectIdentifier.Table(modificationCommands[0].TableName, modificationCommands[0].Schema);
-      if (modificationCommands.Count == 1
-        && modificationCommands[0].ColumnModifications.All(
-                   o => !o.IsKey
-                  || !o.IsRead
-                  || o.Property?.GetValueGenerationStrategy(table) == MySQLValueGenerationStrategy.IdentityColumn))
-      {
-        return AppendInsertOperation(commandStringBuilder, modificationCommands[0], commandPosition);
-      }
-
-      var readOperations = modificationCommands[0].ColumnModifications.Where(o => o.IsRead).ToList();
-      var writeOperations = modificationCommands[0].ColumnModifications.Where(o => o.IsWrite).ToList();
-      var keyOperations = modificationCommands[0].ColumnModifications.Where(o => o.IsKey).ToList();
-
-      var defaultValuesOnly = writeOperations.Count == 0;
-      var nonIdentityOperations = modificationCommands[0].ColumnModifications
-        .Where(o => o.Property?.GetValueGenerationStrategy(table) != MySQLValueGenerationStrategy.IdentityColumn)
-        .ToList();
-
-      if (defaultValuesOnly)
-      {
-        if (nonIdentityOperations.Count == 0 || readOperations.Count == 0)
-        {
-          foreach (var modification in modificationCommands)
-          {
-            AppendInsertOperation(commandStringBuilder, modification, commandPosition);
-          }
-
-          return readOperations.Count == 0
-              ? ResultSetMapping.NoResultSet
-              : ResultSetMapping.LastInResultSet;
-        }
-
-        if (nonIdentityOperations.Count > 1)
-        {
-          nonIdentityOperations = new List<IColumnModification> { nonIdentityOperations.First() };
-        }
-      }
-
-      if (readOperations.Count == 0)
-      {
-        return AppendBulkInsertWithoutServerValues(commandStringBuilder, modificationCommands, writeOperations);
-      }
-
-      foreach (var modification in modificationCommands)
-      {
-        AppendInsertOperation(commandStringBuilder, modification, commandPosition);
-      }
-
-      return ResultSetMapping.LastInResultSet;
-    }
-
-    private ResultSetMapping AppendBulkInsertWithoutServerValues(
-    StringBuilder commandStringBuilder,
-    IReadOnlyList<IReadOnlyModificationCommand> modificationCommands,
-    List<IColumnModification> writeOperations)
-    {
-      Debug.Assert(writeOperations.Count > 0);
-
-      var name = modificationCommands[0].TableName;
-      var schema = modificationCommands[0].Schema;
-
-      AppendInsertCommandHeader(commandStringBuilder, name, schema, writeOperations);
-      AppendValuesHeader(commandStringBuilder, writeOperations);
-      AppendValues(commandStringBuilder, string.Empty, null, writeOperations);
-      for (var i = 1; i < modificationCommands.Count; i++)
-      {
-        commandStringBuilder.Append(",").AppendLine();
-        AppendValues(commandStringBuilder, string.Empty, null, modificationCommands[i].ColumnModifications.Where(o => o.IsWrite).ToList());
-      }
-      commandStringBuilder.Append(SqlGenerationHelper.StatementTerminator).AppendLine();
-
-      return ResultSetMapping.NoResultSet;
-    }
-
-    protected override void AppendInsertCommandHeader(
-          [NotNull] StringBuilder commandStringBuilder,
-          [NotNull] string name,
-           string? schema,
-          [NotNull] IReadOnlyList<IColumnModification> operations)
-    {
-      Check.NotNull(commandStringBuilder, nameof(commandStringBuilder));
-      Check.NotEmpty(name, nameof(name));
-      Check.NotNull(operations, nameof(operations));
-
-      base.AppendInsertCommandHeader(commandStringBuilder, name, schema, operations);
-
-      if (operations.Count <= 0)
-      {
-        commandStringBuilder.Append(" ()");
-      }
-    }
-
-    protected override void AppendValuesHeader(
-      [NotNull] StringBuilder commandStringBuilder,
-      [NotNull] IReadOnlyList<IColumnModification> operations)
-    {
-      Check.NotNull(commandStringBuilder, nameof(commandStringBuilder));
-      Check.NotNull(operations, nameof(operations));
-
-      commandStringBuilder.AppendLine();
-      commandStringBuilder.Append("VALUES ");
-    }
-
-    protected override void AppendValues(
-          [NotNull] StringBuilder commandStringBuilder,
-          [NotNull] string name,
-            string? schema,
-          [NotNull] IReadOnlyList<IColumnModification> operations)
-    {
-      base.AppendValues(commandStringBuilder, name, schema, operations);
-
-      if (operations.Count <= 0)
-      {
-        commandStringBuilder.Append("()");
-      }
-    }
-
-    protected override void AppendIdentityWhereCondition(StringBuilder commandStringBuilder, IColumnModification columnModification)
-    {
-      Check.NotNull(columnModification, "columnModification");
-      Check.NotNull(commandStringBuilder, "commandStringBuilder");
-      commandStringBuilder.AppendFormat("{0} = LAST_INSERT_ID()", SqlGenerationHelper.DelimitIdentifier(columnModification.ColumnName));
-    }
-
-    protected override void AppendRowsAffectedWhereCondition(StringBuilder commandStringBuilder, int expectedRowsAffected)
-    {
-      Check.NotNull(commandStringBuilder, "commandStringBuilder");
-      commandStringBuilder
-        .Append("ROW_COUNT() = " + expectedRowsAffected.ToString(CultureInfo.InvariantCulture));
-    }
-
-    protected override ResultSetMapping AppendSelectAffectedCountCommand(StringBuilder commandStringBuilder, string name, string? schemaName, int commandPosition)
-    {
-      Check.NotNull(commandStringBuilder, "commandStringBuilder");
-      Check.NotEmpty(name, "name");
-
-      commandStringBuilder
-        .Append("SELECT ROW_COUNT()")
-        .Append(SqlGenerationHelper.StatementTerminator).AppendLine()
-        .AppendLine();
-
-      return ResultSetMapping.LastInResultSet;
-    }
-
-    protected override void AppendWhereAffectedClause(
-      [NotNull] StringBuilder commandStringBuilder,
-      [NotNull] IReadOnlyList<IColumnModification> operations)
-    {
-      Check.NotNull(commandStringBuilder, nameof(commandStringBuilder));
-      Check.NotNull(operations, nameof(operations));
-
-      var nonDefaultOperations = operations
-        .Where(
-            o => !o.IsKey ||
-               !o.IsRead ||
-               o.Property == null ||
-               !o.Property.ValueGenerated.HasFlag(ValueGenerated.OnAdd) ||
-               MySQLPropertyExtensions.IsCompatibleAutoIncrementColumn(o.Property))
-        .ToList()
-        .AsReadOnly();
-
-      base.AppendWhereAffectedClause(commandStringBuilder, nonDefaultOperations);
-    }
-
-    internal enum ResultsGrouping
-    {
-      OneResultSet,
-      OneCommandPerResultSet
-    }
-#elif NET8_0_OR_GREATER
     public virtual ResultSetMapping AppendBulkInsertOperation(
       StringBuilder commandStringBuilder,
       IReadOnlyList<IReadOnlyModificationCommand> modificationCommands,
@@ -585,8 +408,5 @@ namespace MySql.EntityFrameworkCore
       Check.NotNull(commandStringBuilder, "commandStringBuilder");
       commandStringBuilder.AppendFormat("{0} = LAST_INSERT_ID()", SqlGenerationHelper.DelimitIdentifier(columnModification.ColumnName));
     }
-#endif
-
-
   }
 }
